--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <main>
         <section id="historia">
             <h2>Conheça Chaguinhas Bank</h2>
-            <p>Chaguinhas bank, o banco que foi criado pensando no seu bem pelo bem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi magni fugiat laborum quo doloribus obcaecati dicta vel? Alias molestias mollitia, modi veniam voluptates in dolor atque quam rem ad id.</p>
+            <p>Chaguinhas bank, o banco que foi criado pensando em você, para você. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi magni fugiat laborum quo doloribus obcaecati dicta vel? Alias molestias mollitia, modi veniam voluptates in dolor atque quam rem ad id.</p>
         </section>
         <section>
             <h1 id="cplano">Conheça nossos planos</h1>
